mobile header model overflow fix

--- a/package/rooter-extra/luci-theme-material/files/www/luci-static/material/custom.css
+++ b/package/rooter-extra/luci-theme-material/files/www/luci-static/material/custom.css
@@ -11,3 +11,35 @@
 	--submenu-bg-hover-active: #09c;
 	--font-body: "Microsoft Yahei", "WenQuanYi Micro Hei", "sans-serif", "Helvetica Neue", "Helvetica", "Hiragino Sans GB";
 }
+
+
+/* mobile header model overflow fix */
+
+header > .fill > .container {                                                                                         
+	display: flex;
+}        
+
+header > .fill > .container > .brand {                                                                                               
+	width: 100%;
+	display: inline-flex;
+	position: relative !important;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+}        
+
+header > .fill > .container > .brand > img {                                                                                               
+	margin-right: auto;
+	order: 2;
+}
+
+header > .fill > .container > .brand > font {                                                                                               
+	font-size: unset;
+	margin-top: 0.3em;
+	order: 3;
+}
+
+@media screen and (max-width: 640px) {
+	header > .fill > .container > .brand > font {
+		display: none;	
+	}
+}
